--- a/practice1/link.html
+++ b/practice1/link.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Practise1(link)</title>
 </head>
 <body>
 <h2>Шерлок Холмс</h2>
 <hr>
-<img src="images/image.jpg" alt="Шерлок Холмс">
+<img alt="Шерлок Холмс" src="images/image.jpg">
 <p><strong>Ше́рлок Хо́лмс (або Го́лмс), повне ім'я Вільям Шерлок Скотт Холмс (англ. Sherlock Holmes, англ. вимова:
     [ˌʃɜːlɒk ˈhəʊmz]) — вигаданий детективний персонаж, головний герой книг англійського письменника
     Артура Конана Дойла. В оповіданнях про Шерлока Холмса, зазвичай, мова йде від імені його друга і супутника — доктора
