--- a/practise2/index.html
+++ b/practise2/index.html
@@ -86,6 +86,10 @@
         .footer li{
             font-weight: bold;
         }
+        .links{
+                height: 100%;
+            width: 100%;
+        }
 
     </style>
 </head>
@@ -372,19 +376,33 @@
 </div>
 <div class="footer">
     <h2 id="menutext6">Примітки</h2>
-    <ol>
-        <li> Encyclopædia Britannica</li>
-        <li>Internet Broadway Database — 2000.</li>
-        <li>Lowe L. Happy Birthday, Daniel Radcliffe! 5 of His Best Movies Since Harry Potter — 2017.</li>
-        <li>Craig McLean (4 липня 2009). The Guardian </li>
-        <li>https://www.telegraph.co.uk/culture/harry-potter/5734000/Daniel-Radcliffe-a-cool-nerd.html</li>
-        <li id="upper1"> Daniel Jacob Radcliffe (actor bio). HarryPotter.Warnerbros. Архів оригіналу за 2007-06-15. Процитовано 2007-06-05.</li>
-        <li id="upper2">Daniel Radcliffe, or Daniel Jacob Radcliffe (British actor) — Britannica Online Encyclopedia</li>
-        <li id="upper3">Названы самые высокооплачиваемые актеры десятилетия. www.fashiontime.ru (ru). Процитовано 2020-11-26.</li>
-        <li id="upper4">правды», Сайт «Комсомольской (2010-10-06). Гарри Поттер вступился за геев. vrn.kp.ru - Сайт «Комсомольской правды». Процитовано 2020-11-26.</li>
-        <li id="upper5">Daniel Radcliffe to Receive Trevor Project's Hero Award | Hollywood Reporter. www.hollywoodreporter.com. Процитовано 2020-11-26.</li>
-        <li id="upper6">Daniel Radcliffe to Receive Trevor Project's Hero Award | Hollywood Reporter. www.hollywoodreporter.com. Процитовано 2020-11-26.</li>
-    </ol>
+    <div class="links">
+        <ol>
+            <li> Encyclopædia Britannica</li>
+            <li>Internet Broadway Database — 2000.</li>
+            <li>Lowe L. Happy Birthday, Daniel Radcliffe! 5 of His Best Movies Since Harry Potter — 2017.</li>
+            <li>Craig McLean (4 липня 2009). The Guardian</li>
+            <li>https://www.telegraph.co.uk/culture/harry-potter/5734000/Daniel-Radcliffe-a-cool-nerd.html</li>
+            <li id="upper1"> Daniel Jacob Radcliffe (actor bio). HarryPotter.Warnerbros. Архів оригіналу за 2007-06-15.
+                Процитовано 2007-06-05.
+            </li>
+            <li id="upper2">Daniel Radcliffe, or Daniel Jacob Radcliffe (British actor) — Britannica Online
+                Encyclopedia
+            </li>
+            <li id="upper3">Названы самые высокооплачиваемые актеры десятилетия. www.fashiontime.ru (ru). Процитовано
+                2020-11-26.
+            </li>
+            <li id="upper4">правды», Сайт «Комсомольской (2010-10-06). Гарри Поттер вступился за геев. vrn.kp.ru - Сайт
+                «Комсомольской правды». Процитовано 2020-11-26.
+            </li>
+            <li id="upper5">Daniel Radcliffe to Receive Trevor Project's Hero Award | Hollywood Reporter.
+                www.hollywoodreporter.com. Процитовано 2020-11-26.
+            </li>
+            <li id="upper6">Daniel Radcliffe to Receive Trevor Project's Hero Award | Hollywood Reporter.
+                www.hollywoodreporter.com. Процитовано 2020-11-26.
+            </li>
+        </ol>
+    </div>
     <h2 id="menutext7">Посилання</h2>
     <ul>
         <li>Денієл Редкліфф на сайті IMDb (англ.)</li>
