--- a/practise3/index2.html
+++ b/practise3/index2.html
@@ -10,6 +10,7 @@
         justify-content: space-between;
         box-sizing: border-box;
         height: 360px;
+        width: 1350px;
     }
    .header{
        background: rgb(12,101,167);
@@ -64,10 +65,10 @@
 <body>
 <header class="header">Header</header>
 <nav class="nav">Nav</nav>
-<main class="box">
+<div class="box">
     <main class="main">Main</main>
     <aside class="aside">Aside</aside>
-</main>
+</div>
 <footer class="footer">Footer</footer>
 </body>
 </html>
